--- a/celsios to degree.html
+++ b/celsios to degree.html
@@ -7,11 +7,9 @@
 </head>
 <body>
     <script>
-        const l=0.5;
-        let b=4;
-        let h=3;
+        let c=3;
 
-        console.log("Type a area of triangle:",0.5*b*h);
+        console.log("Convert to degree to celcious:",c*(9/5)+32);
     </script>
 </body>
 </html>
