--- a/circle.html
+++ b/circle.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <script>
-        const l=0.5;
-        let b=4;
-        let h=3;
-
-        console.log("Type a area of triangle:",0.5*b*h);
+        const pi= 3.14;
+        let r=20;
+        
+        console.log("Type a area of circle:",pi*r*r);
     </script>
 </body>
 </html>
