--- a/gross salary.html
+++ b/gross salary.html
@@ -7,11 +7,18 @@
 </head>
 <body>
     <script>
-        const l=0.5;
-        let b=4;
-        let h=3;
+        let bs=2000;
+        let hra;
+        let da;
+        let ta;
+        let sum;
 
-        console.log("Type a area of triangle:",0.5*b*h);
+        hra =100/10;
+        da =100/5;
+        ta =100/8;
+
+        sum=hra-da-ta-bs;
+        console.log(sum);
     </script>
 </body>
 </html>
