--- a/rate of intrest.html
+++ b/rate of intrest.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <script>
-        const l=0.5;
-        let b=4;
-        let h=3;
+     let p=30;
+     let r=20;
+     let n=2;
 
-        console.log("Type a area of triangle:",0.5*b*h);
+     console.log("Type a rate of intrest:",p*r*n/100);
     </script>
 </body>
 </html>
